--- a/Zp/res/layout/ac_fragment.xml
+++ b/Zp/res/layout/ac_fragment.xml
@@ -58,7 +58,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/TextView02"
+            android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
@@ -77,7 +77,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/TextView04"
+            android:id="@+id/tv_zp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
