Добавил пасхалку и отступы в разметку

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,10 +9,10 @@
         <item>@string/settings</item>
     </string-array>
     <string-array name="menu_icons">
-        <item>@drawable/raschet_ser</item>
-        <item>@drawable/rascheti_ser</item>
-        <item>@drawable/theory</item>
-        <item>@drawable/andy_tools_hammer_spanner</item>
+        <item>@drawable/menu_raschet_ser</item>
+        <item>@drawable/menu_rascheti_ser</item>
+        <item>@drawable/menu_theory</item>
+        <item>@drawable/menu_hammer_spanner</item>
         <item>@drawable/menu_settings</item>
     </string-array>
 
