--- a/app/src/main/res/layout/accounts_fragment.xml
+++ b/app/src/main/res/layout/accounts_fragment.xml
@@ -23,7 +23,7 @@
     <ListView
         android:id="@+id/counts_list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
     <TextView
